fix styling so header doesn't go behind navbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
   color: #505050;
 
   min-height: 75rem;
-  padding-top: 2rem;
+  padding-top: 4.5rem;
 }
 
 a:link {
